RESOLVED FIXED139657
Separate counted and hysteresis activities in PageThrottler
https://bugs.webkit.org/show_bug.cgi?id=139657
Summary Separate counted and hysteresis activities in PageThrottler
Gavin Barraclough
Reported 2014-12-15 15:14:05 PST
Currently all activities funnel into a common hysteresis mechanism, the result of which is combined with the visually idle state, the result of which in turn drives a UserActivity::Impl. This is a first refactoring towards moving the UserActivity out to WebKit2. Use m_hysteresis only of the impulse activities (plugin evaluation, user input), and flatten the three types of activities (impulse, counted, ViewState) to all directly control a UserActivity. Switch from a UserActivity::Impl to a UserActivity since this will provide hysteresis for media activity.
Attachments
Fix (4.40 KB, patch)
2014-12-15 15:16 PST, Gavin Barraclough
sam: review+
Gavin Barraclough
Comment 1 2014-12-15 15:16:49 PST
WebKit Commit Bot
Comment 2 2014-12-15 15:19:24 PST
Attachment 243315 [details] did not pass style-queue: ERROR: Source/WebCore/page/PageThrottler.cpp:34: Code inside a namespace should not be indented. [whitespace/indent] [4] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Note You need to log in before you can comment on or make changes to this bug.