Separate counted and hysteresis activities in PageThrottler https://bugs.webkit.org/show_bug.cgi?id=139657

Reviewed by Sam Weinig.

Currently all activities funnel into a common hysteresis mechanism, the result of
which is combined with the visually idle state, the result of which in turn drives
a UserActivity::Impl.

This is a first refactoring towards moving the UserActivity out to WebKit2. Use
m_hysteresis only of the impulse activities (plugin evaluation, user input), and
flatten the three types of activities (impulse, counted, ViewState) to all directly
control a UserActivity. Switch from a UserActivity::Impl to a UserActivity since
this will provide hysteresis for media activity.

* page/PageThrottler.cpp:
(WebCore::m_pageActivityCounter):
    - when the RefCounter changes just call updateUserActivity directly, removeed redundant call to updateUserActivity.
(WebCore::PageThrottler::createUserActivity):
    - m_activity is now a UserActivity.
(WebCore::PageThrottler::updateUserActivity):
    - previously just checked m_hysteresis for activity; now check m_pageActivityCounter too.
(WebCore::PageThrottler::pageActivityCounterValueDidChange): Deleted.
    - no longer needed; when the RefCounter changes just call updateUserActivity directly.
* page/PageThrottler.h:
    - removed pageActivityCounterValueDidChange, m_activity is now a UserActivity.



Canonical link: https://commits.webkit.org/157550@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177318 268f45cc-cd09-0410-ab3c-d52691b4dbfc